Fixed some errors.

--- a/hw04_gapminder_tidydata_joins.Rmd
+++ b/hw04_gapminder_tidydata_joins.Rmd
@@ -27,10 +27,11 @@ Using `gather()` and `spread()` functions to reshape data can be very useful to 
  
 ## Activity 2: 
  
-- Make a tibble with one row per year and columns for life expectancy for two or more countries.
+* Make a tibble with one row per year and columns for life expectancy for two or more countries.
 
--Use knitr::kable() to make this table look pretty in your rendered homework.
--Take advantage of this new data shape to scatterplot life expectancy for one country against that of another.
+* Use knitr::kable() to make this table look pretty in your rendered homework.
+
+* Take advantage of this new data shape to scatterplot life expectancy for one country against that of another.
 
 For this activity, I will select the countries from North America: Mexico, United States and Canada. 
 
@@ -97,11 +98,11 @@ With the tidy data, we can compare life expectancy between countries in North Am
 
 ## Activity 3: Compute a measure of life expectancy 
 
-*Compute some measure of life expectancy for all possible combinations of continent and year. Reshape that to have one row per year and one variable for each continent. Or the other way around: one row per continent and one variable per year.
+* Compute some measure of life expectancy for all possible combinations of continent and year. Reshape that to have one row per year and one variable for each continent. Or the other way around: one row per continent and one variable per year.
 
-*Use knitr::kable() to make these tables look pretty in your rendered homework.
+* Use knitr::kable() to make these tables look pretty in your rendered homework.
 
-*Is there a plot that is easier to make with the data in this shape versis the usual form? If so (or you think so), try it! Reflect.
+* Is there a plot that is easier to make with the data in this shape versis the usual form? If so (or you think so), try it! Reflect.
 
 
 For this task, I will look at the maximum values of life expectancy in continents throughout the year.
@@ -180,7 +181,7 @@ gather(tidy_year, year, max_lifeExp, -continent) %>% #define data, key and value
 Now we have the original subset. In this case, R put all the year columns that I had before into a single one. 
 
 
-#Join Prompts (join, merge, look up)
+# Join Prompts (join, merge, look up)
 
 ## Activity #1
 
@@ -188,12 +189,12 @@ Create a second data frame, complementary to Gapminder. Join this with (part of)
 
 For this task, I will choose some countries I've visited. The variables in this second data frame will be:
 
-*country
-*continent
-*language spoken
-*a city visited
-*NATO membership 
-*OECD membership
+* country
+* continent
+* language spoken
+* a city visited
+* NATO membership 
+* OECD membership
 
 Now, let's create the data frame:
 
@@ -227,7 +228,7 @@ kable(Euro_2007) %>%
  `inner_join()` returns all rows from x where there are matching values in y, and all columns from x and y. 
  
 ```{r, warning=FALSE, message = FALSE}
-inner_join(countries_visited, Euro_2007) %>% # x=Euro_2007, y=new_df
+inner_join(countries_visited, Euro_2007) %>% # x=new_df, y=Euro_2007
   kable() %>%
   kable_styling(full_width = FALSE)
   
@@ -262,7 +263,7 @@ Here, we can see that the countries from the Americas were kept in the output ev
 Now let's change the value of x and y to and see what happens:
 
 ```{r, warning=FALSE, message = FALSE}
-left_join(Euro_2007, countries_visited) %>%
+left_join(Euro_2007, countries_visited) %>% #This time x=Euro_2007 and y=countries_visited
   kable()%>%
   kable_styling(full_width = FALSE)
 ```
@@ -297,8 +298,9 @@ All data from both datasets is kept: matching and non matches.
 
 ## Activity #3
 
-*Exploring `merge()` which also does joins. Compare with `dplyr` joins.
-*Exploring `match()` which is related to joins and merges, but is more of a "table lookup".
+* Exploring `merge()` which also does joins. Compare with `dplyr` joins.
+
+* Exploring `match()` which is related to joins and merges, but is more of a "table lookup".
 
 ### merge()
 
@@ -318,7 +320,7 @@ merge(countries_visited, Euro_2007, all=TRUE) %>%
   kable_styling(full_width = FALSE)
 ```
 
-`merge()` can also return the outputs like when I used `left_join()`
+`merge()` can also return the output like when I used `left_join()`
 
 ```{r}
 merge(countries_visited, Euro_2007, all.x=TRUE) %>%
@@ -329,7 +331,7 @@ merge(countries_visited, Euro_2007, all.x=TRUE) %>%
 
 ### match()
 
-Let's try to match the countries in the subsets:
+Let's try to match the variable country in the subsets:
 
 ```{r}
 (countries_index<- match(countries_visited$country, Euro_2007$country))
@@ -344,6 +346,7 @@ Euro_2007[Euro_2007$country %in% countries_names,] %>% #work around to get colum
   kable_styling(full_width = FALSE)
 ```
 
-This output is as if I used the `semi_join` function keeping only matching values and columns from only one of the subsets. 
+This output is as if I used the `semi_join` function keeping only matching values and columns from only one of the subsets. But this function works with vectors.
 
-The `dplyr` joins can save some lines of code but I can see how `merge()` and `match()` can be handy :smile:
+
+The `dplyr` joins can save some lines of code in some cases, it lets you know which variable is using to join, and it's easy to work with data frames but I can also see how `merge()` and `match()` can be handy sometimes :smile:
